--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -8,3 +8,24 @@
 .td{
     padding: 0; !important;
 }
+.vis-hidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
+
+label {
+    margin: 12px;
+    padding: 5px;
+    border: 3px solid gray;
+}
+
+input:checked + label {
+    border-color: blue;
+}
+
